# svg-icons

./: .gitignore  .monorepolint.config.ts  .percy.yml  .pnp.js  .prettierignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.changeset/: afraid-balloons-remain.md  angry-plums-float.md  big-boats-sip.md  calm-cups-tap.md  calm-deers-bow.md  calm-tools-promise.md  chatty-impalas-clap.md  chilled-rings-ring.md  chilly-ducks-wait.md  chilly-hotels-report.md  clever-cats-nail.md  cold-cheetahs-explain.md  (+125 more)
tools/svgbuilder/: Cargo.toml  README.md
tools/svgbuilder/src/: cleaner.rs  error.rs  lib.rs  main.rs  options.rs
tools/svgbuilder/src/task/: conv_shapes.rs  final_fixes.rs  fix_attrs.rs  group_by_style.rs  group_defs.rs  join_style_attrs.rs  macros.rs  merge_gradients.rs  mod.rs  preclean_checks.rs  regroup_gradient_stops.rs  resolve_gradients.rs  resolve_inherit.rs  resolve_use.rs  rm_default_attrs.rs  rm_default_transform.rs  rm_elems.rs  rm_gradient_attrs.rs  rm_invalid_stops.rs  rm_invisible_elems.rs  rm_needless_attrs.rs  rm_text_attrs.rs  rm_unref_ids.rs  rm_unused_coords.rs  rm_unused_defs.rs  rm_version.rs  round_numbers.rs  trim_ids.rs  ungroup_defs.rs  ungroup_groups.rs  utils.rs
tools/svgbuilder/src/task/apply_transforms/: gradients.rs  mod.rs  preproc.rs  shapes.rs
tools/svgbuilder/src/task/paths/: apply_transform.rs  conv_segments.rs  mod.rs  rm_unused.rs
tools/svgbuilder/src/task/rm_dupl_defs/: fe_gaussian_blur.rs  linear_gradient.rs  mod.rs  radial_gradient.rs
(+20 files in other folders)
