[package]
name = "svgbuilder"
version = "0.1.0"
authors = ["Jacob Gillespie <jacobwgillespie@gmail.com>"]
edition = "2018"

[dependencies]
error-chain = { version = "0.11", default-features = false }
log = "0.4"
svgdom = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg_metadata = "0.3.0"
